--- a/resources/assets/less/wiki.less
+++ b/resources/assets/less/wiki.less
@@ -1,7 +1,8 @@
 body.wiki {
     .breadcrumb {
-        margin: 15px 5px 0px 5px;
+        margin: 10px 0px 0px 0px;
         background-color: fade(@c_fg, 15%);
+        border-radius: 2px;
     }
 
     .wiki-row {
@@ -23,6 +24,8 @@ body.wiki {
             margin-left: 10px;
             margin-right: 10px;
         }
+
+        pre { background-color: lighten(@c_fa, 63%); }
 
         table {
             border: 1px solid @c_dark;
